	* src/libsphinx2/kb_main.c: Likewise.
	* src/libsphinx2/live_norm.c: Likewise.
	* src/libsphinx2/lm_3g.c: Likewise.
	* src/libsphinx2/phone.c: Likewise.
	* src/libsphinx2/sc_vq.c: Likewise.
	* src/libsphinx2/search.c: Likewise.
	* src/libsphinx2/searchlat.c: Likewise.
	* src/libsphinx2/time_align.c: Likewise.
	* src/libsphinx2/uttproc.c: Likewise.

	* src/libsphinx2ad/ad_oss.c: Frob the input gain (possibly too
	much), not the microphone output level.

-------------------------------------------------------------------------------

2001-01-26  Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Integrated some comments and code from Heidi J. Fox
	to make things work under solaris (not yet completed,
	but someone can take another shot at it now)

2001-03-30 Kevin A. Lenzo <lenzo@cs.cmu.edu> 
	* added <string.h> to fe_interface.c and uttproc.c
	* re-included the win32 tree in dist (thanks to Wei Xu)

2001-06-02 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* fixed a lookup bug in time_align.c (thanks to Yan Ke)
	* Noted that most changes are actually now in the CVS 
	  commits rathter than in this file...

2001-09-18 Kevin A. Lenzo <lenzo@cs.cmu.edu>
        * Added notes to sphinx2-demo	

2001-10-23 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Made all error, warnings and info messages use the E_* macros
	  in err.[ch].  This will make logmsg.[ch] irrelevant.
	* Added error verbage to report more in several places,
	  particularly in time_align.c.  Forced alignments were failing
	  for people without apparent error; this is now reported with
	  diagnosis.

2001-10-26 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Fixed an error in raw2cep that prevented sphinx2 from reading
	  the output .mfc files.
	* Added dict_free to dict.c and dict.h for people who are 
	  changing language models at run-time and want to free the
	  prior dictionary to save memory.
	
2001-11-06 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Patch supplied by rkm (Ravi) for search.c fixes a serious error
	  in search
	